# apairo

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  trainer_template.yaml
apairo/: __init__.py
apairo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apairo/core/: __init__.py  abstract_batch_sampler.py  abstract_dataset.py  abstract_loader.py  abstract_sampler.py  config.py  configurable_dataset.py  preprocessor.py  profiled_dataset.py  sample.py  sequence_view.py  synchronous_dataset.py
apairo/dataset/: __init__.py  concat.py  concat_dataset.py  goose.py  kitti.py  rellis.py  semantic_kitti.py  tartan_kitti.py  tartan_pt.py  torch_wrapper.py  torch_wrappers.py
apairo/loader/: __init__.py  bin_loader.py  img_loader.py  npy_loader.py  npys_loader.py  pt_loader.py  txt_loader.py  txt_rows_loader.py
apairo/preprocess/: runner.py
apairo/sampler/: latest_sync_sampler.py  low_freq_uniform_sampler.py  uniform_sampler.py
apairo/utils/: paths.py  timestamps.py
apairo/writer/: __init__.py  bin_writer.py  npy_writer.py  pt_writer.py
docs/: async-datasets.md  combining.md  concepts.md  index.md  preprocessing.md  quickstart.md  samplers.md
docs/api/: reference.md
docs/datasets/: adding-a-dataset.md  index.md  yaml-profiles.md
examples/: example1.py  goose_traversability.py  goose_traversability_amiad.py  goose_traversable_labels.yaml  identity_model.py  image_trainer.py  tartan_kitti_basic.py  tartan_kitti_preprocess.py
src/core/: __init__.py  abstract_dataset.py  abstract_loader.py  abstract_sampler.py
src/data_apairo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dataset/: __init__.py  concat_dataset.py  separable_dataset.py  tartan_kitti.py  tartan_pt.py  torch_wrapper.py
src/loader/: __init__.py  img_loader.py  npy_loader.py  npys_loader.py  pt_loader.py
src/sampler/: latest_sync_sampler.py  low_freq_uniform_sampler.py  uniform_sampler.py
src/tmp/: config_generator.py  npy2ply.py  profile_generator.py
src/transform/: node.py  normalized.py
src/utils/: __init__.py  convertor.py  files.py  loss.py  paths.py  timestamps.py  types.py  (+1 more)
test/: conftest.py  paths.py  test_public_api.py  test_sequence_view.py  test_utils.py
trainers/: config_example1.yaml
(+49 files in other folders)
