[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apairo"
version = "0.1.0"
description = "Extensible framework to load robotics datasets"
readme = "README.md"
authors = [
  { name = "Augustin Bresset", email = "augustin.bresset@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "PyYAML",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]
viz = ["matplotlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apairo*"]

[tool.setuptools.package-data]
apairo = ["dataset/**/*.yaml", "core/config/*.yaml"]
