[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apairo"
version = "0.1.0"
description = "Extensible framework to load robotics datasets"
readme = "README.md"
authors = [
  { name = "Augustin Bresset", email = "augustin.bresset@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "PyYAML",
]

[project.optional-dependencies]
torch = ["torch"]
vision = ["Pillow"]
dev = ["pytest", "matplotlib", "Pillow"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apairo*"]

[tool.setuptools.package-data]
apairo = ["dataset/**/*.yaml", "core/config/*.yaml"]
